--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -54,3 +54,13 @@ typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 typeMismatch=Property {0} is type-mismatched
+
+default.inquilino.label=Inquilino
+default.propiedad.label=Propiedad
+default.alquiler.label=Alquiler
+
+default.list=Listar
+default.create=Crear
+default.delete=Eliminar 
+default.update=Editar 
+
